delete-all-notes-at-once
functionality to delete all the local storage is added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,37 @@
      <div class="displayNotes" id="notesContainer">
 
      </div>
+     <div class="tut">
+        <h2>how to use</h2>
+        <p>add your title of your work in title field and it will be displayed on a screen and adding descriptio is optional ,you can ommit it </p>
+        <p>click on "add note" button , your data will be saved and displayed </p>
+        <p>this webpage is build using html,css,javascript and all the notes/data is saved on local storage not on cloud/server</p>
+        <p>for source code of this page-<a href="https://github.com/navneetkumar-b2/to-do-js">click here</a></p>
+        <p></p>
+
+        <p>for any Query/Complain connect to-<strong>navneetkumar.html@gmail.com</strong></p>
+        <p>other projects-</p>
+          <ul>
+            <li><a href="https://weather.navneet.website/">check weather report</a></li>
+          </ul>
+          <ul>
+            <li><a href="https://game.navneet.website/">tic-tac-toe(game)</a></li>
+          </ul>
+          <ul>
+            <li><a href="https://navneet.website/">portfolio(wordpress)</a></li>
+          </ul>
+          <ul>
+            <li><a href="https://time.navneet.website/">time-table(It-B)</a></li>
+          </ul>
+        
+    </div>
+    <div id="helloElement" onclick="deleteAllNotes()">
+        Delete all notes
+    </div>
+      <footer class="footer">
+        <p>Just Another Website by <a class="credit" href="https://instagram.com/bittu_boss__01_?utm_source=qr&igshid=OGIxMTE0OTdkZA=="> <strong>Navneet kumar</strong></a></p>
+        <p>For any Complain/Suggestions <a href="mailto:navneetkumar.html@gmail.com"> click here</a></p>
+    </footer>
    <script  src="script.js"></script>
 
 </body>
