error while adding notes

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="to-do-img.png" type="image/x-icon">
     <title>To-Do</title>
-
 </head>
 <body>
     <nav class="nav-bar">
@@ -13,8 +13,9 @@
     </nav>
     <div class="containerr">
         <h2 class="heading"> my digital note book</h2>
-    <Input class="title" type="text" value="" placeholder="title"> </Input><br>     
-    <Input class="desc" type="text" value="" placeholder="description (optional)"> </Input>  <br>   
+        <h4 class="heading"> Add Your To-Do's here</h4>
+    <Input class="title" type="text" value="" placeholder="title" > </Input><br>     
+    <Input class="desc" type="text" value="" placeholder="description (optional)"> </Input>  <br> 
     <button class="subBtn" onclick="addNote()" type="submit">add note</button>
      </div>
      <div class="displayNotes" id="notesContainer">
