checkbox working ,but no change in style

--- a/index.html
+++ b/index.html
@@ -16,21 +16,22 @@
         <h4 class="heading"> Add Your To-Do's here</h4>
     <Input class="title" type="text" value="" placeholder="title" > </Input><br>     
     <Input class="desc" type="text" value="" placeholder="description (optional)"> </Input>  <br> 
-    <button class="subBtn" onclick="addNote()" type="submit">add note</button>
+    <button class="subBtn" onclick="addNote()" type="submit">Add Note</button>
      </div>
      <div class="displayNotes" id="notesContainer">
 
      </div>
      <div class="tut">
         <h2>how to use</h2>
-        <p>add your title of your work in title field and it will be displayed on a screen and adding descriptio is optional ,you can ommit it </p>
-        <p>click on "add note" button , your data will be saved and displayed </p>
-        <p>this webpage is build using html,css,javascript and all the notes/data is saved on local storage not on cloud/server</p>
-        <p>for source code of this page-<a href="https://github.com/navneetkumar-b2/to-do-js">click here</a></p>
+        <p>Add title and description (optional) of your goals/tasks </p>
+        <p>Once you've filled in the details , click on the "Save" or "Add Note" button to add the task to your list. </p>
+        
+        <p>This webpage is build using html,css,javascript and all the notes/data is saved on local storage not on cloud/server.</p>
+        <p>For source code of this page-<a href="https://github.com/navneetkumar-b2/to-do-js">click here</a></p>
         <p></p>
 
         <p>for any Query/Complain connect to-<strong>navneetkumar.html@gmail.com</strong></p>
-        <p>other projects-</p>
+        <p>Consider Checking out some other projects -</p>
           <ul>
             <li><a href="https://weather.navneet.website/">check weather report</a></li>
           </ul>
@@ -42,6 +43,9 @@
           </ul>
           <ul>
             <li><a href="https://time.navneet.website/">time-table(It-B)</a></li>
+          </ul>
+          <ul>
+            <li><a href="https://mess.navneet.website/">my-Mess-Menu</a></li>
           </ul>
         
     </div>
